Fixed color for scrollbar-color, improved appearance for desktop devices, changed hr

--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ body {
   .container {
     padding: 36px;
   }
+
+  @media (min-width: 768px) {
+    .container {
+        max-width: 1000px;
+        margin: 0 auto;
+        padding-left: 128px;
+        padding-right: 128px;
+    }
+}
   
   .container p {
     color: white;
@@ -240,7 +249,7 @@ body {
   
   /* Стили для линии прокрутки в Firefox */
   * {
-    scrollbar-color: #1a1f28 #1e2530;
+    scrollbar-color: #1a1f28;
   }
   
   *::-webkit-scrollbar {
@@ -249,7 +258,7 @@ body {
   
   /* Стили для выделения текста */
   ::selection {
-    background-color: #ffcc00;
+    background-color: #ffffff;
     color: #000;
   }
   
@@ -269,6 +278,8 @@ body {
     height: auto;
     max-height: 400px;
     object-fit: cover;
+    border: 2px #1a1f28 solid;
+    border-radius: 8px;
   }
   
   /* ОПТИМИЗАЦИЯ ДЛЯ МОБИЛЬНЫХ УСТРОЙСТВ */
@@ -351,3 +362,10 @@ body {
         padding-top: 150px;
     }
   }
+
+ hr {
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(134, 47, 171, 0.3);
+}
